# Backtesting

./: .gitignore  VolatilityAnalysis.py  download.py  f.py  pyproject.toml  run_backtest.py
Backtesting/: backtester.py  strategies.py
ExploratoryAnalysis/: GetData.py
ExploratoryAnalysis/Datasets/: AAPL_2018-01-03_2022-01-01.csv  USDCHFX_2018-01-02_2022-01-01.csv
FrameworkBacktesting/: predictors.py  run_backtest.py  strategies.py
