[project]
name = "BacktestingV0"
version = "0.1.0"
description = ""
authors = [
    {name = "SalomoneCro",email = "pedrosalomone@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "backtesting (>=0.6.5,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
